tests/snapshots/ast__precedence_binary_ops.snap
---
source: tests/ast.rs
expression: result
---
--- INPUT ---
(+ (* 2 3) (/ 10 5))

--- SUCCESS ---
Block([
	Call(+, [Call(*, [Literal(U8(2)), Literal(U8(3))]), Call(/, [Literal(U8(10)), Literal(U8(5))])])
])
