tests/snapshots/ast__precedence_mixed_comparisons.snap
---
source: tests/ast.rs
expression: result
---
--- INPUT ---
(> (+ x 1) (* y 2))

--- SUCCESS ---
Block([
	Call(>, [Call(+, [Identifier(x), Literal(U8(1))]), Call(*, [Identifier(y), Literal(U8(2))])])
])
