tests/snapshots/ast__whitespace_multiline_block.snap
---
source: tests/ast.rs
expression: result
---
--- INPUT ---
(fn:void process (a:i32)
  (if (> a 0)
    ((ret true))
    ((ret false))
  )
)

--- SUCCESS ---
Block([
	Fn(process->void,
		Params([a i32]),
		If(
			Call(>, [Identifier(a), Literal(U8(0))]),
			Block([
				Return(Literal(Boolean(true)))
			]),
			Some(Block([
				Return(Literal(Boolean(false)))
			]))
		)
	)
])
