tests/snapshots/ast__whitespace_newlines.snap
---
source: tests/ast.rs
expression: result
---
--- INPUT ---
(let x 
  (+ 5 5))

--- SUCCESS ---
Block([
	Let(x, Call(+, [Literal(U8(5)), Literal(U8(5))]))
])
